--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A simple vue context menu component.",
   "main": "src/js/index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --env.mixfile=build/webpack.mix.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "dev-test": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --env.mixfile=build/webpack-test.mix.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch-test": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --env.mixfile=build/webpack-test.mix.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --env.mixfile=build/webpack.mix.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "dev": "mix --mix-config=build/webpack.mix.js",
+    "dev-test": "mix --mix-config=build/webpack-test.mix.js",
+    "watch-test": "mix watch --mix-config=build/webpack-test.mix.js",
+    "production": "mix --production --mix-config=build/webpack.mix.js"
   },
   "keywords": [
     "Vue",
@@ -29,13 +29,14 @@
     "vue-clickaway": "^2.2.2"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.11.0",
-    "cross-env": "^5.2.1",
-    "laravel-mix": "^4.1.4",
-    "resolve-url-loader": "^2.3.2",
-    "sass": "^1.26.10",
-    "sass-loader": "^7.3.1",
-    "vue": "^2.6.11",
-    "vue-template-compiler": "^2.6.11"
+    "@babel/preset-env": "^7.15.8",
+    "cross-env": "^7.0.3",
+    "laravel-mix": "^6.0.34",
+    "resolve-url-loader": "^4.0.0",
+    "sass": "^1.43.2",
+    "sass-loader": "^12.2.0",
+    "vue": "^2.6.14",
+    "vue-loader": "^15.9.8",
+    "vue-template-compiler": "^2.6.14"
   }
 }
