--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "mix --mix-config=build/webpack.mix.js",
     "dev-test": "mix --mix-config=build/webpack-test.mix.js",
-    "watch-test": "mix watch --mix-config=build/webpack-test.mix.js",
+    "watch-test": "mix watch --hot --mix-config=build/webpack-test.mix.js",
     "production": "mix --production --mix-config=build/webpack.mix.js"
   },
   "keywords": [
@@ -26,7 +26,7 @@
   },
   "homepage": "https://vue-context.com/docs",
   "dependencies": {
-    "vue-clickaway": "^2.2.2"
+    "vue3-click-away": "^1.2.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.15.8",
@@ -35,8 +35,7 @@
     "resolve-url-loader": "^4.0.0",
     "sass": "^1.43.2",
     "sass-loader": "^12.2.0",
-    "vue": "^2.6.14",
-    "vue-loader": "^15.9.8",
-    "vue-template-compiler": "^2.6.14"
+    "vue": "^3.2.20",
+    "vue-loader": "^16.8.1"
   }
 }
