--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-env": "^7.15.8",
     "cross-env": "^7.0.3",
     "laravel-mix": "^6.0.34",
+    "prettier": "^2.4.1",
     "resolve-url-loader": "^4.0.0",
     "sass": "^1.43.2",
     "sass-loader": "^12.2.0",
