--- a/package.json
+++ b/package.json
@@ -1,13 +1,24 @@
 {
   "name": "@madogai/vue-context",
-  "version": "7.0.1",
+  "version": "8.0.0",
   "description": "A simple vue context menu component.",
-  "main": "src/js/index.js",
+  "type": "module",
+  "files": ["dist"],
+  "exports": {
+    ".": {
+      "import": "./dist/vue-context.js",
+      "require": "./dist/vue-context.cjs"
+    }
+  },
+  "main": "dist/vue-context.umd.cjs",
+  "module": "dist/vue-context.js",
   "scripts": {
-    "dev": "mix --mix-config=build/webpack.mix.js",
-    "dev-test": "mix --mix-config=build/webpack-test.mix.js",
-    "watch-test": "mix watch --hot --mix-config=build/webpack-test.mix.js",
-    "production": "mix --production --mix-config=build/webpack.mix.js"
+    "dev": "vite",
+    "build": "run-p type-check build-only",
+    "preview": "vite preview",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --noEmit",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "keywords": [
     "Vue3",
@@ -25,18 +36,25 @@
   },
   "homepage": "https://vue-context.com/docs",
   "dependencies": {
-    "vue3-click-away": "^1.2.1"
+    "vue3-click-away": "1.2.4"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.15.8",
-    "cross-env": "^7.0.3",
-    "laravel-mix": "^6.0.34",
-    "prettier": "^2.4.1",
-    "resolve-url-loader": "^4.0.0",
-    "sass": "^1.43.2",
-    "sass-loader": "^12.2.0",
-    "vue": "^3.2.20",
-    "vue-loader": "^16.8.1"
+    "@rushstack/eslint-patch": "1.2.0",
+    "@types/node": "18.13.0",
+    "@vitejs/plugin-vue": "4.0.0",
+    "@vue/eslint-config-prettier": "7.0.0",
+    "@vue/eslint-config-typescript": "11.0.2",
+    "@vue/tsconfig": "0.1.3",
+    "eslint": "8.34.0",
+    "eslint-plugin-vue": "9.9.0",
+    "npm-run-all": "4.1.5",
+    "prettier": "2.8.4",
+    "typescript": "4.9.5",
+    "vite": "4.1.1",
+    "vue-tsc": "1.0.24"
+  },
+  "peerDependencies": {
+    "vue": "3.2.47"
   },
   "directories": {
     "doc": "docs",
