--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "8.0.0",
   "description": "A simple vue context menu component.",
   "type": "module",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "exports": {
     ".": {
       "import": "./dist/vue-context.js",
@@ -12,6 +14,7 @@
   },
   "main": "dist/vue-context.umd.cjs",
   "module": "dist/vue-context.js",
+  "types": "dist/main.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
@@ -51,6 +54,7 @@
     "prettier": "2.8.4",
     "typescript": "4.9.5",
     "vite": "4.1.1",
+    "vite-plugin-dts": "1.7.2",
     "vue-tsc": "1.0.24"
   },
   "peerDependencies": {
