--- a/package.json
+++ b/package.json
@@ -1,17 +1,12 @@
 {
   "name": "@madogai/vue-context",
-  "version": "8.0.1",
+  "version": "8.0.3",
   "description": "A simple vue context menu component.",
   "type": "module",
   "files": [
-    "dist"
+    "dist",
+    "src/sass"
   ],
-  "exports": {
-    ".": {
-      "import": "./dist/vue-context.js",
-      "require": "./dist/vue-context.cjs"
-    }
-  },
   "main": "dist/vue-context.umd.cjs",
   "module": "dist/vue-context.js",
   "types": "dist/main.d.ts",
