--- a/package.json
+++ b/package.json
@@ -38,19 +38,20 @@
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "1.2.0",
-    "@types/node": "18.13.0",
-    "@vitejs/plugin-vue": "4.0.0",
-    "@vue/eslint-config-prettier": "7.0.0",
-    "@vue/eslint-config-typescript": "11.0.2",
-    "@vue/tsconfig": "0.1.3",
-    "eslint": "8.34.0",
-    "eslint-plugin-vue": "9.9.0",
+    "@tsconfig/node18": "2.0.0",
+    "@types/node": "18.16.3",
+    "@vitejs/plugin-vue": "4.2.1",
+    "@vue/eslint-config-prettier": "7.1.0",
+    "@vue/eslint-config-typescript": "11.0.3",
+    "@vue/tsconfig": "0.3.2",
+    "eslint": "8.39.0",
+    "eslint-plugin-vue": "9.11.0",
     "npm-run-all": "4.1.5",
-    "prettier": "2.8.4",
-    "typescript": "4.9.5",
-    "vite": "4.1.1",
-    "vite-plugin-dts": "1.7.2",
-    "vue-tsc": "1.0.24"
+    "prettier": "2.8.8",
+    "typescript": "5.0.4",
+    "vite": "4.3.3",
+    "vite-plugin-dts": "2.3.0",
+    "vue-tsc": "1.6.1"
   },
   "peerDependencies": {
     "vue": "3.2.47"
